--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -6,110 +6,53 @@
 }
 
 .main {
-  padding: 0 30px 30px;
+  min-height: 100dvh;
+  padding: 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
-}
 
-.search {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-
-  svg {
-    fill: var(--base-font);
-    width: 24px;
-    height: 24px;
+  h1 {
+    font-size: 30px;
   }
 
-  span {
-    margin-right: 5px;
-    text-shadow: var(--base-shadow);
-    font-size: 16px;
-    font-weight: 700;
+  p {
+    font-size: 20px;
   }
 }
 
-.banner {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 20px;
-}
-
-.card {
-  width: calc(100% - 60px);
-  margin-bottom: 40px;
-  padding: 20px 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  border-radius: 20px;
-  border: 2px solid #c2daeb;
-  backdrop-filter: blur(10px);
-  background-color: rgba(255, 255, 255, 0.3);
-}
-
-.temp {
-  font-size: 100px;
-  text-shadow: var(--base-shadow);
-  line-height: 127px;
-}
-
-.description {
-  font-size: 24px;
-  font-weight: 700;
-}
-
-.params {
+.history {
+  position: fixed;
+  bottom: 0;
   width: 100%;
+  min-height: 50%;
   display: flex;
   flex-direction: column;
-  margin-top: 20px;
-  gap: 10px;
-}
-
-.parameter {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  font-size: 18px;
-  text-shadow: var(--base-shadow);
-
-  svg {
-    filter: drop-shadow(var(--base-shadow));
-  }
-
-  span {
-    display: flex;
-    gap: 10px;
-  }
-
-  span::after {
-    content: " ";
-    width: 2px;
-    height: 20px;
-    background-color: var(--base-font);
-    box-shadow: var(--base-shadow);
-  }
-}
-
-.moreButton {
-  display: flex;
-  align-items: center;
-  padding: 10px 30px;
-  background-color: var(--base-font);
+  padding: 30px 20px;
+  background-color: #fcfcfc;
   color: var(--secondary-font);
-  border-radius: 20px;
-  gap: 10px;
-  box-shadow: inset 2px -3px 6px rgba(0, 0, 0, 0.25),
-    -4px 8px 50px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 30px 30px 0 0;
+  animation: slide-y 0.5s ease-in-out;
+}
 
-  svg {
-    path,
-    rect {
-      fill: var(--secondary-font);
-    }
+.title {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+
+  h2 {
+    font-size: 24px;
+    line-height: 20px;
+  }
+}
+
+@keyframes slide-y {
+  0% {
+    opacity: 0;
+    transform: translateY(100%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
   }
 }
