--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -21,28 +21,16 @@
   }
 }
 
-.history {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  min-height: 50%;
-  display: flex;
-  flex-direction: column;
-  padding: 30px 20px;
-  background-color: #fcfcfc;
-  color: var(--secondary-font);
-  border-radius: 30px 30px 0 0;
-  animation: slide-y 0.5s ease-in-out;
-}
-
 .title {
+  position: relative;
   display: flex;
   align-items: center;
   gap: 5px;
+  font-size: 24px;
 
-  h2 {
-    font-size: 24px;
-    line-height: 20px;
+  svg {
+    position: relative;
+    top: -2px;
   }
 }
 
